staging/templates/ingress.yml
apiVersion: networking.k8s.io/v1 #not helming ingress for now
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging.placements.100xdevs.com
      secretName: job-board-staging-tls
    - hosts:
        - staging.projects.100xdevs.com
      secretName: dailycode-staging-tls
    - hosts:
        - staging.app.100xdevs.com
      secretName: cms-staging-tls
    - hosts:
        - quiz.100xdevs.com
      secretName: quiz-tls
    - hosts:
        - quiz-backend.100xdevs.com
      secretName: quiz-backend-tls
    - hosts:
        - ai.api.100xdevs.com
      secretName: ai-api-tls
    - hosts:
        - ai.100xdevs.com
      secretName: ai-tls
    - hosts:
        - webinar.gg
      secretName: webinar-tls
    - hosts:
        - webinar-api.webinar.gg
      secretName: webinar-server-tls
    - hosts:
        - webinar-ws-api.webinar.gg
      secretName: webinar-ws-tls
    - hosts:
        - algo-arena.100xdevs.com
      secretName: algo-arena-tls
    - hosts:
        - trade.100xdevs.com
      secretName: trade-tls
    - hosts:
        - trade-backend.100xdevs.com
      secretName: trade-backend-tls
    - hosts:
        - school.100xdevs.com
      secretName: school-tls
    - hosts:
        - photo.100xdevs.com
      secretName: photo-frontend-tls
    - hosts:
        - api.photoaiv2.100xdevs.com
      secretName: photo-backend-tls
  rules:
    - host: staging.placements.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: job-board-staging
                port:
                  number: 80
    - host: staging.projects.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dailycode-staging
                port:
                  number: 80
    - host: staging.app.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-staging
                port:
                  number: 80
    - host: quiz.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-frontend
                port:
                  number: 80
    - host: quiz-backend.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quiz-backend-server
                port:
                  number: 80
    - host: ai.api.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qanda-chatbot-server
                port:
                  number: 80
    - host: ai.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qanda-frontend
                port:
                  number: 80
    - host: webinar.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webinar-frontend
                port:
                  number: 80
    - host: webinar-api.webinar.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webinar-server
                port:
                  number: 80
    - host: webinar-ws-api.webinar.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webinar-ws
                port:
                  number: 80
    - host: algo-arena.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: algo-arena-frontend
                port:
                  number: 80
    - host: trade.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trade-frontend
                port:
                  number: 80
    - host: trade-backend.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trade-backend
                port:
                  number: 80
    - host: school.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: school
                port:
                  number: 80

    - host: photo.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-ai-frontend
                port:
                  number: 80
    - host: api.photoaiv2.100xdevs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photo-ai-backend
                port:
                  number: 80
